Improved again